src/objects/Parcel_Account__c.object
<CustomObject>
    <description>Store Address for Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Master lookup field</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address (Accounts)</relationshipLabel>
        <relationshipName>Parcel_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For identifying archived MUNI record.</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Address_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Cust Address Id</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Mailing address</description>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <description>Parcel object master lookup field</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Address (Accounts2)</relationshipLabel>
        <relationshipName>Parcel_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is physical address</description>
        <label>Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Primary address</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Public address</description>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Parcel Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Mailing__c</columns>
        <columns>Parcel__c</columns>
        <columns>Physical__c</columns>
        <columns>Primary__c</columns>
        <columns>Public__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>